--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,18 @@
-== README
+== DaVinci Motors
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is a Ruby on Rails application I developed as part of the
+{Building the Toolbelt of a Junior Ruby on Rails Engineer}[http://davincicoders.com/building-the-toolbelt-of-a-junior-ruby-on-rails-developer/]
+class I took in the Summer of 2013.
 
-Things you may want to cover:
+Features:
 
-* Ruby version
+  TBD
 
-* System dependencies
+Usage:
 
-* Configuration
+  Clone the Repo locally
+  cd into that directory
+  bundle
+  rails s
 
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+  Visit your copy at http://localhost:3000/
